--- a/exeventbus/src/main/AndroidManifest.xml
+++ b/exeventbus/src/main/AndroidManifest.xml
@@ -1,2 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.llx278.exeventbus" />
+    package="com.llx278.exeventbus"
+
+    >
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        >
+        <service android:name=".remote.test.TestService1" android:process=":remote1"/>
+        <service android:name=".remote.test.TestService2" android:process=":remote2"/>
+        <service android:name=".remote.test.TestService3" android:process=":remote3"/>
+        <service android:name=".remote.test.TestService4" android:process=":remote4"/>
+    </application>
+</manifest>
