--- a/exeventbus/build.gradle
+++ b/exeventbus/build.gradle
@@ -22,6 +22,11 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            manifest.srcFile 'src/androidTest/AndroidManifest.xml'
+        }
+    }
 }
 
 dependencies {
