--- a/exeventbus/src/main/AndroidManifest.xml
+++ b/exeventbus/src/main/AndroidManifest.xml
@@ -1,19 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.llx278.exeventbus"
+    package="com.llx278.exeventbus">
 
-    >
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        >
-        <service android:name=".remote.test.TestService1" android:process=":remote1"/>
-        <service android:name=".remote.test.TestService2" android:process=":remote2"/>
-        <service android:name=".remote.test.TestService3" android:process=":remote3"/>
-        <service android:name=".remote.test.TestService4" android:process=":remote4"/>
-        <service android:name=".remote.test.TestService5" android:process=":remote5"/>
-        <service android:name=".remote.test.TestService6" android:process=":remote6"/>
-        <service android:name=".remote.test.TestService7" android:process=":remote7"/>
-        <service android:name=".remote.test.TestService8" android:process=":remote8"/>
+        android:supportsRtl="true">
     </application>
+
 </manifest>
