--- a/exeventbus/src/androidTest/AndroidManifest.xml
+++ b/exeventbus/src/androidTest/AndroidManifest.xml
@@ -34,6 +34,23 @@
             android:name=".TestService9"
             android:process=":remote9"
             />
+        <service
+            android:name=".TestService10"
+            android:process=":remote10"
+            />
+        <service
+            android:name=".TestService11"
+            android:process=":remote11"
+            />
+        <service
+            android:name=".TestService12"
+            android:process=":remote12"
+            />
+        <service
+            android:name=".TestService13"
+            android:process=":remote13"
+            />
+
     </application>
 
 </manifest>
