合并了从Hook项目中修改的代码

--- a/exeventbus/src/androidTest/AndroidManifest.xml
+++ b/exeventbus/src/androidTest/AndroidManifest.xml
@@ -50,6 +50,9 @@
             android:name=".TestService13"
             android:process=":remote13"
             />
+        <service android:name=".TestService14"
+            android:process=":remote14"
+            />
 
     </application>
 
