移除广播，用自定义的进程事件进程间的通信

--- a/exeventbus/build.gradle
+++ b/exeventbus/build.gradle
@@ -25,6 +25,7 @@ android {
     sourceSets {
         main {
             manifest.srcFile 'src/androidTest/AndroidManifest.xml'
+            manifest.srcFile 'src/main/AndroidManifest.xml'
         }
     }
 }
