--- a/exeventbus/src/androidTest/AndroidManifest.xml
+++ b/exeventbus/src/androidTest/AndroidManifest.xml
@@ -1,12 +1,63 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.llx278.exeventbus">
+    package="com.llx278.exeventbus.test">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         >
+
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService1"
+            android:process=":remote1" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService2"
+            android:process=":remote2" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService3"
+            android:process=":remote3" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService4"
+            android:process=":remote4" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService5"
+            android:process=":remote5" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService6"
+            android:process=":remote6" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService7"
+            android:process=":remote7" />
+        <service
+            android:name="com.llx278.exeventbus.remote.TestService8"
+            android:process=":remote8" />
+        <service
+            android:name="com.llx278.exeventbus.TestService9"
+            android:process=":remote9"
+            />
+        <service
+            android:name="com.llx278.exeventbus.TestService10"
+            android:process=":remote10"
+            />
+        <service
+            android:name="com.llx278.exeventbus.TestService11"
+            android:process=":remote11"
+            />
+        <service
+            android:name="com.llx278.exeventbus.TestService12"
+            android:process=":remote12"
+            />
+        <service
+            android:name="com.llx278.exeventbus.TestService13"
+            android:process=":remote13"
+            />
+        <service android:name="com.llx278.exeventbus.TestService14"
+            android:process=":remote14"
+            />
+        <service android:name="com.llx278.exeventbus.remote.TestService15"
+            android:process=":remote15"
+            />
     </application>
 
 </manifest>
