--- a/exeventbus/src/main/AndroidManifest.xml
+++ b/exeventbus/src/main/AndroidManifest.xml
@@ -8,9 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <service android:name="com.llx278.exeventbus.remote.RouteService"
-            android:process=":exeventbus_bd"
-            android:exported="true"
-            tools:ignore="ExportedService">
+            android:process=":exeventbus_bd">
             <intent-filter>
                 <action android:name="com.llx278.exeventbus.sync"/>
             </intent-filter>
