--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sun Feb 04 15:43:34 CST 2018
-systemProp.http.proxyHost=localhost
+#Thu May 03 09:00:08 CST 2018
+systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=8123
+systemProp.http.proxyPort=8118
